--- a/Bachelorarbeit.tex
+++ b/Bachelorarbeit.tex
@@ -18,19 +18,14 @@
 
 \mainmatter
 \include{Kapitel/Einleitung}
-\include{Kapitel/Frameworks}
-\include{Kapitel/Plattformen}
-\include{Kapitel/Performance}
-\include{Kapitel/Testanwendung}
-\input{Kapitel/Anwendungsbestandteile}
-\input{Kapitel/Hauptteil/DynamischeViews}
-\input{Kapitel/Hauptteil/ModulareViews}
-\input{Kapitel/Hauptteil/PageTransitions}
-\input{Kapitel/Hauptteil/PageTransitions-TemplatePrefetching}
-\input{Kapitel/Hauptteil/PageTransitions-DomainData}
-\input{Kapitel/Hauptteil/Lists}
-\input{Kapitel/Hauptteil/HidingUI}
-\input{Kapitel/Hauptteil/FormatData}
+\include{Kapitel/Kapitel1}
+\include{Kapitel/Kapitel2}
+\include{Kapitel/Kapitel3}
+\include{Kapitel/Kapitel4}
+\input{Kapitel/Hauptteil}
+\input{Kapitel/Hauptteil/HauptteilKapitel1}
+\input{Kapitel/Hauptteil/HauptteilKapitel2}
+\input{Kapitel/Hauptteil/HauptteilKapitel3}
 \include{Kapitel/Fazit}
 
 \backmatter
@@ -40,8 +35,8 @@
 \mbbibliography
 
 \appendix
-\include{Kapitel/Anhang/DomainDataBuffer}
-\include{Kapitel/Anhang/BenchmarkJSFormeln}
+\include{Kapitel/Anhang/Anhang1}
+\include{Kapitel/Anhang/Anhang2}
 \include{Kapitel/Erklaerung}
 
 \mbemptypage
