--- a/Kapitel/Abstract.tex
+++ b/Kapitel/Abstract.tex
@@ -1,3 +1,9 @@
 \mbchapter{Abstract}
 
-Die vorliegende Arbeit beschäftigt sich mit der Performance-Optimierung von Apps, die mit Webtechnologien und auf Basis der Frameworks AngularJS, Ionic und Cordova entwickelt werden. Es wird der Frage nachgegangen, welche Implementierungen unterschiedlicher Anwendungsbestandteile die beste Performance ermöglichen. Ziel ist es, eine allgemeine Erkenntnissammlung mit Best-Practice Lösungen für die Entwicklung von Apps mit diesen Frameworks zu erstellen. Der Begriff App wird in diesem Zusammenhang für so genannte \glqq Productivity\grqq{}-Apps verwendet. Spiele fallen nicht in diese Kategorie, da sich ihre Anforderungen stark davon unterscheiden. Die untersuchten Anwendungsbestandteile wurden im Vorfeld festgelegt. Es werden jeweils verschiedene Implementierungen getestet und hinsichtlich ihrer Performance untersucht. Die Entscheidung für oder gegen eine Implementierung wird auf Basis der Performance oder weiterer Anhaltspunkte, wie der \glqq gefühlten\grqq{} Performance und dem Nutzererlebnis getroffen. Im Ergebnis wird deutlich, dass durch die Verwendung von geeigneten Implementierungen für verschiedene Anwendungsszenarien eine deutliche Performance-Optimierung möglich ist.
+Die vorliegende Arbeit beschäftigt sich mit ...
+
+% Beispiel 
+% Hochkommata: \glqq Productivity\grqq{}
+% Literaturverweis: \cite{literatur-schluessel}
+% Glossarverweis: \gls{css}
+% Verweis: \ref{label-name}
