--- a/Kapitel/Deckblatt.tex
+++ b/Kapitel/Deckblatt.tex
@@ -1,5 +1,5 @@
-\newcommand{\mbname}{Marco Busemann}
-\newcommand{\mbtitle}{Best-Practice Lösungen für mobile Webanwendungen mit AngularJS und Ionic unter Performance-Aspekten}
+\newcommand{\mbname}{Vorname Nachname}
+\newcommand{\mbtitle}{Titel der Arbeit}
 \newcommand{\mbtype}{Bachelorarbeit}
 \newcommand{\mbuniversity}{
 	Fachhochschule Köln\\
@@ -8,32 +8,32 @@
 	Ingenieurwissenschaften\\}
 \newcommand{\mbstudiengang}{
 	Allgemeine Informatik \\
-	Matrikelnummer: 11081445 }	
+	Matrikelnummer: XXXXXXXX }	
 \newcommand{\mbpruefer}{        
-	Erster Prüfer:  &  Professor Dr. Heiner Klocke\\
+	Erster Prüfer:  &  Professor Dr. XXXX XXXX\\
     				&  \small Fachhochschule Köln \\[1.0em]
-    Zweiter Prüfer: &  Dr. Hendrik Voigt \\
-    				&  \small OPITZ CONSULTING GmbH \\}					   
-\newcommand{\mbort}{Gummersbach, Juni 2015}
+    Zweiter Prüfer: &  Dr. XXXX XXXX \\
+    				&  \small Firma \\}					   
+\newcommand{\mbort}{Gummersbach, Monat Jahr}
 \newcommand{\mbadressen}{	
-	&  \quad Marco Busemann\\
-	&  \quad Im Sohl 33\\
-	&  \quad 51643 Gummersbach\\
-	&  \quad marco.busemann@live.com\\[2.0em]
+	&  \quad Vorname Nachname\\
+	&  \quad Straße u. Hausnr.\\
+	&  \quad PLZ Ort\\
+	&  \quad E-Mail Adresse\\[2.0em]
 							
-	&  \quad Professor Dr. Heiner Klocke\\
+	&  \quad Professor Dr. XXXX XXXX\\
 	&  \quad Fachhochschule Köln\\
 	&  \quad Fakultät für Informatik \\
 	&  \quad und Ingenieurwissenschaften\\
 	&  \quad Steinmüllerallee 1\\
 	&  \quad 51643 Gummersbach\\
-	&  \quad heinrich.klocke@fh-koeln.de\\[2.0em]
+	&  \quad E-Mail\\[2.0em]
 							
-	&  \quad Dr. Hendrik Voigt\\
-	&  \quad OPITZ CONSULTING GmbH\\
-	&  \quad Kirchstraße 6\\
-	&  \quad 51647 Gummersbach (Nochen)\\
-	&  \quad hendrik.voigt@opitz-consulting.com\\}
+	&  \quad Dr. XXXX XXXX\\
+	&  \quad Firma\\
+	&  \quad Firmenadresse\\
+	&  \quad PLZ Ort\\
+	&  \quad E-Mail\\}
 
 \begin{titlepage}
 \begin{center}
