--- a/Kapitel/Erklaerung.tex
+++ b/Kapitel/Erklaerung.tex
@@ -5,7 +5,7 @@ Alle Stellen, die wörtlich oder sinngemäß \ aus veröffentlichten Arbeiten an
 Die Arbeit hat nach meinem Wissen mit gleichem Inhalt noch keiner anderen Prüfungsbehörde vorgelegen.
 \vspace{1.5cm}
 \\
-Gummersbach, 17. April 2015
+Gummersbach, Tag. Monat 2015
 \vspace{2cm}
 \\
-Marco Busemann
+Vorname Nachname
