--- a/Utils/Setup.tex
+++ b/Utils/Setup.tex
@@ -27,7 +27,7 @@
 % PDF-Informationen und Hyperlinks
 \usepackage[pdftex,plainpages=false,pdfpagelabels,
             pdftitle={Bachelorarbeit},
-            pdfauthor={Marco Busemann}
+            pdfauthor={Vorname Name}
             ]{hyperref}
 
 % Glossar
@@ -43,7 +43,7 @@
 \makeglossaries
 
 % Generell information
-\author{Marco Busemann}
+\author{Vorname Nachname}
 \title{Bachelorarbeit}
 
 % Header konfigurieren
